# wordbeez-docker

./: .containerignore  .gitignore  .project  CLAUDE.md  Dockerfile  Makefile  README.md  wbeez-route
.github/workflows/: gh-pages.yml
chart/wordswarm/: Chart.yaml  values.yaml
chart/wordswarm/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  route.yaml  secret.yaml  service.yaml
docs/: .gitignore  Makefile  site.yml
docs/content/: antora.yml
docs/content/modules/ROOT/: nav.adoc
docs/content/modules/ROOT/pages/: 01-overview.adoc  02-module-01-reasoning.adoc  index.adoc  (+2 more)
wbee-1.0/: Dockerfile  README.txt
wbee-1.0/css/: wordswarm.css
wbee-1.0/lib/lato-black-font/: .bower.json
wbee-1.0/lib/oswald-font/: .bower.json
wordswarm-agent/: .containerignore  Containerfile  pyproject.toml  run.sh
wordswarm-agent/src/wordswarm_agent/: agent.py  blind_solver.py  config.py  game_client.py  graph.py  main.py  solver.py  stats.py
wordswarm-agent/src/wordswarm_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wordswarm-next/: .containerignore  .gitignore  Containerfile  Dockerfile  next.config.ts  package-lock.json  package.json
wordswarm-next/src/app/: globals.css  layout.tsx  page.tsx
wordswarm-next/src/app/dashboard/: layout.tsx  page.tsx
wordswarm-next/src/components/: Bees.tsx  GamePage.tsx  Guide.tsx  HoneyMeter.tsx  Honeycomb.tsx  HowToPlay.tsx  Leaderboard.tsx  MainMenu.tsx  WordList.tsx
wordswarm-next/src/lib/: agentProcess.ts  gameEngine.ts  gameStore.ts  leaderboard.ts  randompath.ts  sessionId.ts  sounds.ts
(+7 files in other folders)
