[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordswarm-agent"
version = "0.1.0"
description = "LangChain agent that plays the WordSwarm honeycomb word game"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.3",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
wordswarm-agent = "wordswarm_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wordswarm_agent = ["words.json"]
